# agnus

./: README.md
server/: .gitignore  langgraph.json  main.py  pyproject.toml  requirements.txt
server/agentic_rag/: chains.py  llm.py  models.py  prompts.py  retrievel_query.py  vectorDB_config.py
server/agentic_rag/nodes/: document_node.py  embedding_node.py  propositions_chunk_node.py  propositions_chunk_summary_node.py  propositions_grouping_node.py  propositions_summary_title_node.py  synthesizer_node.py  vectordb_node.py
server/api/V1/routers/: document.py
server/core/: response_format.py
server/rag/: chunk_correcter.py  text_splitter.py
server/rag/ingestion/: content_extraction.py  embedding.py  rag_ingestion_pipeline.py  text_splitter.py  vectordb.py
server/rag/retrieval/: retrieval_graph.py  retrieval_state.py
server/rag/retrieval/retrieval_nodes/: clear_state.py  corrective_node.py  query_decompositon.py  query_synthesizing.py  (+2 more)
server/services/: ingestion.py
server/workspaces/deep_research_workspace/: deep_research_agent_graph.py  deep_research_chains.py  deep_research_llm.py  deep_research_memory_tracking.py  deep_research_prompts.py  deep_research_response_format.py  deep_research_state.py
server/workspaces/fast_research_workspace/: fast_research_agent.py  fast_research_graph.py  fast_research_llm.py  fast_research_prompts.py  fast_research_state.py  state.py
server/workspaces/flashcard_workspace/: flashcard_chains.py  flashcard_model.py  flashcard_prompt.py
server/workspaces/quiz_workspace/: quiz_chain.py  quiz_model.py  quiz_prompt.py
(+52 files in other folders)
