[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.62.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "pinecone>=8.0.0",
    "pymupdf>=1.27.1",
    "tavily-python>=0.7.21",
    "upstash-vector>=0.8.0",
    "uvicorn>=0.40.0",
]
